[package]
authors = ["a"]
description = "Units is a cli for managing systemd units"
name = "units"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
walkdir = "2.5.0"
